fixed readme z-index

--- a/src/sass/ReadMe.scss
+++ b/src/sass/ReadMe.scss
@@ -10,7 +10,7 @@
     opacity: 0;
     animation: appear 0.5s forwards;
     display: flex;
-    z-index: 10;
+    z-index: 20;
 
     .readMeWrapper {
         background: $bgColor;
